# gemma

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  conftest.py  pyproject.toml
.githooks/: pre-commit
dev-notes/: README.md  sdk-seam-roadmap.md
dev-notes/adr/: 0001-version-the-evolution-separately.md  0002-mechanism-in-gemma-domain-in-the-consumer.md
gemma/: __init__.py
harness/: __init__.py  agent.py  context.py  harness_config.json  harness_config.py  instructions.py  memory.py  orchestrator.py  policy.py  provenance.py  render.py  result.py  sandbox.py  skills.py  subagents.py  tools.py  workspace.py
model/: __init__.py  client.py  fake.py  openai_compatible.py  provider.py
skills/sign-off/: SKILL.md
tasks/: __init__.py  accept.py  checks.py  demo.py  verify.py
tests/: conftest.py  test_embedding_seam.py  test_hardening.py  test_harness_config.py  test_print_mode.py  test_render.py  test_streaming.py  test_tui_streaming.py
tests/episodes/: test_ch01.py  test_ch03.py  test_ch04.py  test_ch07.py  test_ch09.py  test_ch10.py  test_ch11.py  test_ch12.py
ui/: tui.py
