[project]
name = "gemma"
version = "0.1.0"
description = "Build a custom agent harness from scratch, one primitive per chapter"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.scripts]
agent = "harness.agent:main"
verify = "tasks.verify:main"
accept = "tasks.accept:main"
demo = "tasks.demo:main"

[dependency-groups]
dev = ["ruff>=0.6", "mypy>=1.11", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model", "harness", "tasks"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
